# StackMe

./: .gitignore  HANDOFF.md  LICENSE  README.md  build-and-push.bat  github-avatar-export.html  package-lock.json  package.json  pyproject.toml  railway.toml  turbo.json
apps/hub/: index.html  package-lock.json  package.json  spike.html  tsconfig.app.json  tsconfig.json  vercel.json  vite.config.ts
apps/hub/public/: analyze-me.html  forge-me.html  market-me.html  robots.txt  security.html  sitemap.xml
apps/hub/public/duckdb/: duckdb-browser-coi.pthread.worker.js  duckdb-browser-coi.worker.js
apps/hub/public/icons/: generate-icons.html
apps/hub/scripts/: copy-duckdb-wasm.mjs  copy-treesitter-wasm.mjs  generate-og.mjs  generate-route-html.mjs
apps/hub/src/: App.tsx  STYLE_GUIDE.html  index.css  main.tsx
apps/hub/src/api/: client.ts
apps/hub/src/components/: LogoMark.tsx
apps/hub/src/context/: ModulesContext.tsx
apps/hub/src/forge-me/: index.tsx
backend/: .dockerignore  Dockerfile  create_test_csv.py  package.json  pyproject.toml  test.csv
backend/core/: auth.py  config.py  db.py  main.py  pyproject.toml  rate_limit.py
backend/core/models/: contact_message.py  locate_report.py  notification.py  roadmap_vote.py  suggestion.py  suggestion_vote.py  user_module.py  user_profile.py
backend/core/routers/: admin.py  contact.py  locate_reports.py  modules.py  notifications.py  roadmap.py  suggestions.py  users.py
backend/services/analyze_me/: pyproject.toml
backend/services/analyze_me/analyze_me/: detectors.py  router.py
backend/services/analyze_me/tests/: test_analyze.csv  test_detectors.py  test_health.py
backend/services/forge_me/: pyproject.toml
backend/services/forge_me/forge_me/: anomaly_engine.py  injectors.py  router.py  schemas.py
backend/services/forge_me/forge_me.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/services/forge_me/tests/: test_anomaly_engine.py
backend/shared/: pyproject.toml
docs/: style-guide.html  token-editor.html  typography-editor.html
(+131 files in other folders)
