[project]
name = "stackme-backend"
version = "0.1.0"
description = "Core API for StackMe platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sqlalchemy>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pydantic>=2.13.3",
    "httpx>=0.28.1",
    "python-jose>=3.5.0",
    "psycopg2-binary>=2.9.0",
    "slowapi>=0.1.9",
    "resend>=2.0.0",
    "forge-me",
    "analyze-me",
]

[tool.uv.workspace]
members = [
    "core",
    "shared",
    "services/forge_me",
    "services/analyze_me",
]

[tool.uv.sources]
forge-me = { workspace = true }
analyze-me = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
    "pytest>=8.0.0",
]